src/app/suggestion/suggestion.component.scss
@use 'index' as *;

:host {
  display: block;
  padding: 28px 32px;
  border-radius: 10px;
  background: #FFF;

  @include mobile {
    padding: 24px;
  }
}

.container {
  padding-left: 80px;
  padding-right: 68px;
  position: relative;

  @include mobile {
    padding: 0 0 48px;
  }
}

app-upvote {
  position: absolute;
  top: 0;
  left: 0;

  @include mobile {
    top: unset;
    bottom: 0;
  }
}

.title {
  display: block;
  
  // Typography
  color: #3A4374;
  font-size: 18px;
  font-weight: 700;
  letter-spacing: -0.25px;
  text-decoration: none;

  &:is(:hover, :focus-visible) {
    color: #4661E6;
  }

  @include mobile {
    font-size: 13px;
    letter-spacing: -0.181px;
  }
}

.description {
  margin: 4px 0 12px;

  // Typography
  color: #647196;
  font-size: 16px;

  @include mobile {
    margin: 9px 0 8px;

    // Typography
    font-size: 13px;
  }
}

.comment-count {
  // centered vertically on the right
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 0;

  @include mobile {
    top: unset;
    transform: unset;
    bottom: 0;
  }
}

